# verus-bigint

./: Cargo.toml  README.md  docs.md
.github/workflows/: check.yml
docs/: runtime-bigint-advanced-proof-todo.md  runtime-bigint-div-mul-cancel-proof-todo.md  runtime-bigint-divmod-proof-todo.md  runtime-bigint-follow-on-proof-todo.md  runtime-bigint-length-bound-proof-todo.md  runtime-bigint-next-proof-todo.md  runtime-bigint-shape-compare-proof-todo.md  runtime-bigint-signed-proof-parity.md  runtime-bigint-signed-todo.md  runtime-bigint-trust-assumptions.md  runtime-bigint-wrapper-proof-todo.md  zero-trust-roadmap-todo.md
scripts/: check-single-file.sh  check.sh  profile-modules.sh  run-codex-task.message.txt  run-codex-task.sh
src/: bigint.rs  lib.rs  runtime_bigint_witness_refinement.rs
src/bigint/: algebra.rs
src/runtime_bigint_witness/: mod.rs  runtime_impl.rs  signed_verified_impl.rs  tests.rs  verified_impl.rs
src/runtime_bigint_witness/verified_impl/: canonical_uniqueness.rs  contracts_arith.rs  contracts_cmp_sub.rs  core_nat_div_mod.rs  core_pow_cmp.rs  core_repr_prefix.rs  ops_add.rs  ops_cmp_sub.rs  ops_div_rem.rs  ops_mul.rs  ops_shape.rs
src/runtime_bigint_witness/verified_sections/: mul_and_cmp.rs  specs_and_add.rs  sub_and_copy.rs
src/trusted/: mod.rs  vec_ext_equal.rs
